# localhost-browser

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dashboard.html  docker-compose.yml  main.js  package-lock.json  package.json  preload.js
.cargo/: config.toml
.github/workflows/: build-windows.yml  ci.yml  release.yml
benches/: performance.rs
src/: browser.rs  config.rs  lib.rs  main.rs  security.rs  ui.slint  utils.rs  validator.rs
