[package]
name = "port-browser"
version = "1.0.0"
edition = "2021"
authors = ["王广成"]
description = "高性能端口浏览器启动器"
license = "MIT"
repository = "https://github.com/guangdawang/localhost-browser"

[features]
default = ["backend-winit"]
# 选择渲染后端（只选一个）
backend-winit = ["slint/backend-winit"]  # 跨平台推荐
backend-qt = ["slint/backend-qt"]        # Linux最佳性能
skia-renderer = ["slint/renderer-skia"]  # 高性能渲染
femtovg-renderer = ["slint/renderer-femtovg"]  # 轻量级

[dependencies]
slint = { version = "1.6", features = [] }
webbrowser = "0.8"      # 浏览器控制
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # 配置序列化
thiserror = "1.0"       # 错误处理
log = "0.4"             # 日志
simple_logger = "4.0"   # 简单日志实现
once_cell = "1.19"      # 全局配置
parking_lot = "0.12"    # 高性能锁
dirs = "5.0"            # 配置目录
winreg = "0.52"         # Windows注册表操作

[dev-dependencies]
criterion = "0.5"       # 性能基准测试

[build-dependencies]
slint-build = "1.6"     # Slint构建工具

[profile.release]
opt-level = "z"         # 最小代码大小
lto = true              # 链接时优化
codegen-units = 1       # 单单元编译
strip = true            # 移除调试符号
panic = "abort"         # 直接终止而不是展开

[profile.dev]
opt-level = 0           # 快速编译
debug = true

[[bench]]
name = "performance"
harness = false
